--- a/chickenApp/Base.lproj/Main.storyboard
+++ b/chickenApp/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                                     <action selector="lButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lFY-n5-BF0"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chick-fil-a" translatesAutoresizingMaskIntoConstraints="NO" id="Y3R-q9-5rd">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cimken" translatesAutoresizingMaskIntoConstraints="NO" id="Y3R-q9-5rd">
                                 <rect key="frame" x="20" y="254" width="374" height="201"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="201" id="7ZN-tj-zDq"/>
@@ -848,7 +848,7 @@
                                     <constraint firstAttribute="width" constant="374" id="Bmj-P5-MFm"/>
                                     <constraint firstAttribute="height" constant="547" id="JYR-98-B0v"/>
                                 </constraints>
-                                <mutableString key="text">Changing Location of Chicken:  - Select what type of chicken is being changed - Select the number corresponding with the case of chicken  Undoing Actions:  - Make sure the type of chicken that is selected and the type of chicken being undone is the same - Press the undo button until all actions are undone  Checking Date and Time of Changes:  - Move to the main screen - Press the "Logs" button - The date and time of recent changes will be displayed</mutableString>
+                                <string key="text">Changing Location of Chicken:  - Select what type of chicken is being changed - Select the number corresponding with the case of chicken  Undoing Actions:  - Make sure the type of chicken that is selected and the type of chicken being undone is the same - Press the undo button until all actions are undone  Checking Date and Time of Changes:  - Move to the main screen - Press the "Logs" button - The date and time of recent changes will be displayed</string>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -865,7 +865,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OeX-Fr-FE4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-19959" y="3245"/>
+            <point key="canvasLocation" x="396" y="742"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oR4-m5-XYk">
@@ -887,7 +887,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="chick-fil-a" width="1640" height="734"/>
+        <image name="cimken" width="300" height="168"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
